# execmanager

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/execmanager-cli/: Cargo.toml
crates/execmanager-cli/src/: app_dirs.rs  commands.rs  daemon_run.rs  doctor.rs  lib.rs  main.rs  metadata.rs  persist.rs  recovery.rs  status.rs  test_support.rs  uninstall.rs
crates/execmanager-cli/src/adapters/: kimi.rs  mod.rs
crates/execmanager-cli/src/init/: apply.rs  detect.rs  mod.rs  plan.rs  verify.rs
crates/execmanager-cli/src/service/: linux.rs  macos.rs  mod.rs
crates/execmanager-cli/tests/: first_run.rs  hook_merge.rs  installer_flow.rs  kimi_hooks.rs  recovery_metadata.rs  restore_uninstall.rs  service_hooks_commands.rs  service_registration.rs  status_doctor.rs  uninstall.rs
crates/execmanager-contracts/: Cargo.toml
crates/execmanager-contracts/src/: lib.rs
crates/execmanager-contracts/tests/: daemon_handshake.rs
crates/execmanager-daemon/: Cargo.toml
crates/execmanager-daemon/src/: lib.rs
crates/execmanager-daemon/tests/: history_retention.rs  journal_replay.rs  managed_exec.rs  reconcile_cleanup.rs  regression_contract.rs  rm_policy.rs  rpc_server.rs  service_detection.rs
crates/execmanager-host-kimi/: Cargo.toml
crates/execmanager-host-kimi/src/: lib.rs
crates/execmanager-host-kimi/tests/: end_to_end_workflows.rs  ingress_contract.rs
crates/execmanager-platform/: Cargo.toml
crates/execmanager-platform/src/: lib.rs
crates/execmanager-platform/tests/: resource_governance.rs
crates/execmanager-tui/: Cargo.toml
crates/execmanager-tui/src/: app.rs  lib.rs  runtime.rs  terminal.rs
crates/execmanager-tui/tests/: app_runtime.rs  render_views.rs
crates/execmanager-viewers/: Cargo.toml
crates/execmanager-viewers/src/: lib.rs
crates/execmanager-viewers/tests/: attachment.rs
docs/superpowers/plans/: 2026-04-16-repo-standardization.md
docs/superpowers/specs/: 2026-04-16-repo-standardization-design.md
tests/: install-script-smoke.sh
