[workspace]
members = [
    "crates/execmanager-contracts",
    "crates/execmanager-host-kimi",
    "crates/execmanager-daemon",
    "crates/execmanager-platform",
    "crates/execmanager-viewers",
    "crates/execmanager-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
