[package]
name = "execmanager-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
execmanager-contracts = { path = "../execmanager-contracts" }
execmanager-platform = { path = "../execmanager-platform" }
futures = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3.10"
