[package]
name = "execmanager-host-kimi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = "1.10"
execmanager-contracts = { path = "../execmanager-contracts" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
execmanager-daemon = { path = "../execmanager-daemon" }
execmanager-tui = { path = "../execmanager-tui" }
execmanager-viewers = { path = "../execmanager-viewers" }
libc = "0.2"
tempfile = "3.10"
