[package]
name = "execmanager-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
execmanager-contracts = { path = "../execmanager-contracts" }
execmanager-daemon = { path = "../execmanager-daemon" }
execmanager-platform = { path = "../execmanager-platform" }

[dev-dependencies]
tempfile = "3.10"
