[package]
name = "execmanager-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = "0.28"
execmanager-contracts = { path = "../execmanager-contracts" }
execmanager-daemon = { path = "../execmanager-daemon" }
execmanager-platform = { path = "../execmanager-platform" }
libc = "0.2"
notify = "8.0"

[dev-dependencies]
tempfile = "3.10"
